<resources>

    <string name="app_name">ConvertItAll</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_update_currencies">Update Currencies</string>
    <string name="title_activity_converter_interface">ConvertItAll</string>

    <!-- swipetab titles -->
    <string name="title_currency">Currency</string>
    <string name="title_length">Length</string>
    <string name="title_temperature">Temperature</string>
    <string name="title_byte">Byte</string>
    <string name="title_numerical_system">Numerical System</string>
    
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    
    <string name="bt_convert_text">Convert</string>
    <string name="sp_choose_text">Choose…</string>
    
    <string name="menu_check_version">Check for new version</string>
    <string name="title_update_dialog">Update</string>
    <string name="msg_update_dialog">To update the currencies you need a working internet connection. A wifi connection is recommended. Procceed ?</string>
    
    <string name="title_favorites_dialog">Favorites</string>
    
    <string name="title_novalue_dialog">Input field is empty or not valid</string>
    <string name="msg_novalue_dialog">Please enter a correct value</string>
    
    <string name="switch_button_content_description">Switch units</string>
    <string name="toast_copy_to_clipboard">Copied to Clipboard</string>
    <string name="menu_copy_to_clipboard">Copy to Clipboard</string>
    
    <string name="menu_favorite">Favorite units</string>
    
    <string name="menu_share">Share</string>
    
    <!-- hints -->
    <string name="hint_currency"></string>
    <string name="hint_numSys"></string>
    <string name="hint_length"></string>
    <string name="hint_degree"></string>
    <string name="hint_byte"></string>
    
    
    <!-- settings -->
    <string name="title_units">Your Units</string>
    <string name="title_theming">Interface</string>
    <string name="title_theme_setting">App Theme</string>
    <string name="theme_instruction">Choose a theme…</string>
    <string name="title_round_currency">Round currency</string>
    <string name="title_misc">Misc</string>
    <string name="title_about">About</string>
    <string name="lable_settings">Settings</string>
    <string name="title_select_currencies">Your currencies</string>
    <string name="summary_select_currencies">Select preferred currencies</string>
    <string name="title_select_lengths">Your length units</string>
    <string name="title_select_temperatures">Your temperature scales</string>
    <string name="summary_select_temperatures">Select preferred temperature scales</string>
    <string name="summary_select_lengths">Select length units</string>
    <string name="title_select_bytes">Your bytes units</string>
    <string name="summary_select_bytes">Select preferred byte units</string>
    
    <string name="lable_changelog">Changelog</string>
    <string name="gmail">funceptionapps@gmail.com</string>
    <string name="menu_feedback">Feedback</string>
</resources>