<menu xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:convert="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_item_copy"
        convert:showAsAction="ifRoom"
        android:icon="@drawable/ic_copy_button_holo_dark"
        android:title="@string/menu_copy_to_clipboard"/>
    
    <item
        android:id="@+id/menu_item_favorite"
        convert:showAsAction="ifRoom"
        android:icon="@drawable/ic_favorite_dark"
        android:title="@string/menu_favorite"/>
    
    <item
        android:id="@+id/menu_item_share"
        convert:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        convert:showAsAction="ifRoom"
        android:visible="true"
        android:title="@string/menu_share"/>
    <item
        android:id="@+id/menu_item_update_currencies"
        android:showAsAction="never"
        android:title="@string/menu_update_currencies"/>
    
    <!--<item
        android:id="@+id/menu_item_check_version"
        convert:showAsAction="never"
        android:title="@string/menu_check_version"/>-->
    
    <item
        android:id="@+id/menu_item_settings"
        convert:showAsAction="never"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/menu_item_feedback"
        convert:showAsAction="never"
        android:title="@string/menu_feedback"/>

</menu>